# PhotisNadi

./: .dockerignore  .flutter-plugins-dependencies  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  analysis_options.yaml  docker-compose.yml  pubspec.yaml  roadmap.md
.claude/hooks/: post-write-check.sh
.dart_tool/: package_config.json  package_graph.json
.dart_tool/build_resolvers/: sdk.sum.deps
.dart_tool/hooks_runner/objective_c/6b4ebf10e70ccf8d154076a186bfba3b/: dependencies.dependencies_hash_file.json  hook.dependencies_hash_file.json  hook.dill.d  input.json  output.json  stdout.txt
.github/workflows/: ci.yml  release.yml
coverage/: lcov.info
docker/: Caddyfile  entrypoint.sh
docs/: supabase_schema.sql
lib/: main.dart
lib/common/: constants.dart  performance_monitor.dart  platform_utils.dart  utils.dart  validators.dart
lib/models/: board.dart  board.g.dart  project.dart  project.g.dart  ritual.dart  tag.dart  tag.g.dart  task.dart  task.g.dart
lib/repositories/: hive_repository.dart  project_repository.dart  ritual_repository.dart  tag_repository.dart  task_repository.dart
lib/screens/: home_screen.dart
lib/server/: agnos.dart  api.dart  auth.dart  serializers.dart
lib/services/: desktop_integration.dart  export_import_service.dart  keyboard_shortcuts.dart  notification_service.dart  supabase_config_service.dart  sync_service.dart  task_service.dart  theme_service.dart  yeoman_service.dart
lib/services/mixins/: column_mixin.dart  filter_sort_mixin.dart  project_mixin.dart  ritual_mixin.dart  tag_mixin.dart  task_crud_mixin.dart
lib/themes/: app_theme.dart
lib/widgets/: kanban_board.dart  project_sidebar.dart  rituals_sidebar.dart  theme_toggle.dart
lib/widgets/common/: project_header.dart  search_filter_bar.dart  task_card.dart
lib/widgets/dialogs/: board_dialogs.dart  project_dialogs.dart  ritual_dialogs.dart  sync_dialogs.dart  tag_dialogs.dart  task_dialogs.dart
lib/widgets/dialogs/sync_dialogs/: account_section.dart  auth_section.dart  conflicts_section.dart  (+3 more)
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Flutter/ephemeral/: Flutter-Generated.xcconfig  flutter_export_environment.sh
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
test/: api_test.dart  hive_test.dart  model_test.dart  project_test.dart  ritual_test.dart  service_test.dart  sync_test.dart  task_service_test.dart  unit_test.dart  widget_dialog_test.dart  widget_test.dart
tools/: bump-version.sh
tools/mcp-server/: index.js  package.json
v2/: Cargo.toml
v2/crates/photisnadi-agnos/: Cargo.toml
v2/crates/photisnadi-agnos/src/: lib.rs
v2/crates/photisnadi-core/: Cargo.toml
v2/crates/photisnadi-core/src/: lib.rs
v2/crates/photisnadi-mcp/: Cargo.toml
v2/crates/photisnadi-mcp/src/: lib.rs  transport.rs
v2/crates/photisnadi-server/: Cargo.toml
v2/crates/photisnadi-server/src/: lib.rs
v2/crates/photisnadi-store/: Cargo.toml
v2/crates/photisnadi-store/src/: lib.rs
v2/src/: main.rs
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+6 files in other folders)
