[package]
name = "photisnadi-server"
version = "2026.3.18-1"
edition = "2024"

[dependencies]
photisnadi-core = { path = "../photisnadi-core" }
photisnadi-store = { path = "../photisnadi-store" }
photisnadi-mcp = { path = "../photisnadi-mcp" }
photisnadi-agnos = { path = "../photisnadi-agnos" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
tower = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
